--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.5.2"
 
     implementation "com.google.android.gms:play-services-location:17.0.0"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
     String hilt_version="2.46"
