--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
 
     String hilt_version="2.46"
     implementation "com.google.dagger:hilt-android:$hilt_version"
