Tags info is added in room db

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,14 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                        "room.schemaLocation":"$projectDir/schemas".toString(),
+                        "room.incremental":"true",
+                        "room.expandProjection":"true"]
+            }
+        }
     }
 
     buildTypes {
@@ -61,8 +69,9 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation "androidx.room:room-runtime:2.3.0"
-    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-runtime:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
+    implementation "androidx.room:room-ktx:2.5.2"
 
     String hilt_version="2.46"
     implementation "com.google.dagger:hilt-android:$hilt_version"
